# swc2obj

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  generateCMD.ipynb  main.cpp  smoothOBJ.py  voldir2obj.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  generateCMD-checkpoint.ipynb  writeSwc-checkpoint.py
ObjMerge/: CMakeLists.txt  ObjMerger.cpp  ObjMerger.h  objMerge.cpp
Result/: vec3(3483.000000, 4697.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3483.000000, 4697.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3483.000000, 4759.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3545.000000, 4697.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3545.000000, 4697.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3545.000000, 4759.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3545.000000, 4759.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3607.000000, 4697.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3607.000000, 4697.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3607.000000, 4759.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3607.000000, 4759.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3607.000000, 4821.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3607.000000, 4821.000000, 10015.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3607.000000, 4821.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3607.000000, 4821.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3669.000000, 4821.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3669.000000, 4821.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3669.000000, 4883.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3669.000000, 4883.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3731.000000, 4883.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3731.000000, 4883.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3731.000000, 4883.000000, 10201.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3731.000000, 4883.000000, 10201.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3731.000000, 4945.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3731.000000, 4945.000000, 10077.000000)_vec3(64.000000, 64.000000, 64.000000).raw  vec3(3731.000000, 4945.000000, 10139.000000)_vec3(64.000000, 64.000000, 64.000000).mhd  vec3(3731.000000, 4945.000000, 10139.000000)_vec3(64.000000, 64.000000, 64.000000).raw  (+146 more)
config/: config.h.in
data/: ObjWriter.cpp  (+4 more)
(+12 files in other folders)
